--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name · Research & Practice</title>
+  <title>Martin Zeilinger · Research & Practice</title>
   <meta name="description" content="Personal site of Your Name – research, artistic practice, teaching.">
 
   <link rel="stylesheet" href="assets/styles.css" />
@@ -14,17 +14,16 @@
     <div class="nav">
       <div class="nav-left">
         <div>
-          <div class="nav-name">Your Name</div>
-          <div class="nav-tagline">Research · Art · Technology</div>
+          <div class="nav-name">Martin Zeilinger</div>
         </div>
       </div>
       <nav class="nav-links" aria-label="Main navigation">
-        <a href="#about" class="nav-link">About</a>
-        <a href="#research" class="nav-link">Research</a>
-        <a href="#projects" class="nav-link">Projects</a>
-        <a href="#teaching" class="nav-link">Teaching</a>
-        <a href="#browse" class="nav-link">Browse by tag</a>
-        <a href="#contact" class="nav-link nav-link--primary">Contact</a>
+        <a href="#about" class="nav-link">_about</a>
+        <a href="#research" class="nav-link">_research</a>
+        <a href="#projects" class="nav-link">_practice</a>
+        <a href="#teaching" class="nav-link">_teaching</a>
+        <a href="#browse" class="nav-link">_browse</a>
+        <a href="#contact" class="nav-link nav-link--primary">_contact</a>
       </nav>
     </div>
   </header>
@@ -33,10 +32,9 @@
     <!-- About / Hero -->
     <section id="about" class="hero">
       <div>
-        <div class="hero-kicker">Personal site</div>
+        <!-- <div class="hero-kicker">Personal site</div> -->
         <h1 class="hero-title">
-          Your Name – working across
-          <span class="hero-highlight">art, research &amp; technology.</span>
+          <span class="hero-highlight">Crossings-over in interdisciplinary research, artistic practice, and curation.</span>
         </h1>
         <p class="hero-lede">
           Short biographical line. For example: “I am a researcher, curator, and
@@ -183,7 +181,7 @@
       </div>
 
       <footer>
-        &copy; <span id="year"></span> Your Name. All rights reserved.
+        <!-- <span id="year"></span> --> Designed and infrequently updated by MZ ¯\_(ツ)_/¯
       </footer>
     </section>
   </main>
