--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
       <div>
         <!-- <div class="hero-kicker">Personal site</div> -->
         <h1 class="hero-title">
-          <span class="hero-highlight">Crossings-over in interdisciplinary research, artistic practice, and curation.</span>
+          <span class="hero-highlight">Crossings-over in interdisciplinary research, creative practice, and curation.</span>
         </h1>
         <p class="hero-lede">
-          Short biographical line. For example: “I am a researcher, curator, and
-          artist exploring how emerging technologies reshape cultural practices,
-          labour, and digital aesthetics.”
+          My areas of interest and specialisation include digital art, AI, critical/artistic approaches to blockchain, IP issues in digital culture, permacomputing, experimental videogame cultures, sound art, and 🚴‍♂️.
         </p>
         <div class="hero-meta">
           <div class="hero-meta-item">Based in: City / Country</div>
