--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           </p>
           <div class="contact-links">
             <a class="contact-pill" href="mailto:you@example.com">
-              <strong>you@example.com</strong>
+              <strong>m [dot] zeilinger [at] abertay [dot] ac [dot] uk</strong>
               <span>Email</span>
             </a>
             <a class="contact-pill" href="#" target="_blank" rel="noopener">
