--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Martin Zeilinger · Research & Practice</title>
-  <meta name="description" content="Personal site of Your Name – research, artistic practice, teaching.">
+  <meta name="description" content="Personal site of Martin Zeilinger – research, artistic practice, teaching.">
 
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
