--- a/item.html
+++ b/item.html
@@ -49,12 +49,12 @@
       text-decoration: none;
       margin-bottom: 0.75rem;
     }
-    .back-link:hover { color: var(--text); text-decoration: underline; }
+    .back-link:hover { color: var(--text); }
   </style>
 </head>
 <body>
   <main class="detail-shell">
-    <a class="back-link" href="index.html">← Back to site</a>
+    <a class="back-link" href="index.html">← Back</a>
     <header class="detail-header">
       <div class="section-title" id="section-label"></div>
       <h1 class="detail-title" id="title"></h1>
