Updates frontpage layout

--- a/index.html
+++ b/index.html
@@ -49,26 +49,17 @@
         </div>
       </div>
 
-      <aside class="hero-card" aria-label="Snapshot">
-        <div class="hero-card-title">Snapshot</div>
-        <ul class="hero-card-grid">
-          <li class="hero-card-item">
-            <span class="hero-card-label">Keywords</span>
-            <span>AI &amp; culture · digital art · game studies</span>
-          </li>
-          <li class="hero-card-item">
-            <span class="hero-card-label">Current projects</span>
-            <span>Example: book, exhibition, research grant</span>
-          </li>
-          <li class="hero-card-item">
-            <span class="hero-card-label">Methods</span>
-            <span>Critical theory · practice-based research</span>
-          </li>
-          <li class="hero-card-item">
-            <span class="hero-card-label">Contact</span>
-            <span>you@example.com</span>
-          </li>
-        </ul>
+      <aside class="hero-feature" aria-label="Featured work">
+        <div class="hero-feature-image" aria-hidden="true"></div>
+        <div class="hero-feature-body">
+          <div class="hero-feature-label">Featured</div>
+          <div class="hero-feature-title">Structures of Belonging</div>
+          <p class="hero-feature-blurb">
+            A look at blockchains as shared civic infrastructure, emphasizing collaboration,
+            mutual care, and co-ownership over speculation.
+          </p>
+          <a class="btn btn-primary" href="item.html?id=structures-of-belonging">Read the feature</a>
+        </div>
       </aside>
     </section>
 
