--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav">
       <div class="nav-left">
         <div>
-          <div class="nav-name">Martin Zeilinger</div>
+          <div class="nav-name">martin zeilinger</div>
         </div>
       </div>
       <nav class="nav-links" aria-label="Main navigation">
@@ -39,10 +39,23 @@
         <p class="hero-lede">
           My areas of interest and specialisation include digital art, AI, critical/artistic approaches to blockchain, IP issues in digital culture, permacomputing, experimental videogame cultures, sound art, and 🚴‍♂️.
         </p>
-        <div class="hero-meta">
+        <p class="hero-lede">
+          <a href="https://rke.abertay.ac.uk/en/persons/martin-zeilinger">Reader in Computational Arts and Technology</a>
+           at Abertay University in Dundee/Scotland.
+        </p>
+        <p class="hero-lede">
+          <a href="https://orpheusinstituut.be/en/projects/metamusicx">Associate Researcher</a>, MetamusicX cluster, Orpheus Institute for Advanced Research in Music, Ghent/Belgium.
+        </p>
+        <p class="hero-lede">
+          <a href="https://marjz.notion.site/wet-tech">Co-organiser of Wet Tech performance series</a>, Dundee/Scotland.
+        </p>
+        <p class="hero-lede">
+          <a href="https://marjz.net/about">More...</a>
+        </p>
+        <!-- <div class="hero-meta">
           <div class="hero-meta-item">Based in: City / Country</div>
           <div class="hero-meta-item">Current role: Your role / affiliation</div>
-        </div>
+        </div> -->
         <div class="hero-cta-row">
           <a href="#research" class="btn btn-primary">View selected work</a>
           <a href="#browse" class="btn">Browse by tag</a>
