--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <div class="nav">
       <div class="nav-left">
         <div>
-          <div class="nav-name">martin zeilinger</div>
+          <a href="index.html" class="nav-name">martin zeilinger</a>
         </div>
       </div>
       <nav class="nav-links" aria-label="Main navigation">
-        <a href="#about" class="nav-link">_about</a>
-        <a href="#research" class="nav-link">_research</a>
-        <a href="#projects" class="nav-link">_practice</a>
-        <a href="#teaching" class="nav-link">_teaching</a>
-        <a href="#browse" class="nav-link">_browse</a>
-        <a href="#contact" class="nav-link nav-link--primary">_contact</a>
+        <a href="about.html" class="nav-link">_about</a>
+        <a href="research.html" class="nav-link">_research</a>
+        <a href="practice.html" class="nav-link">_practice</a>
+        <a href="teaching.html" class="nav-link">_teaching</a>
+        <a href="browse.html" class="nav-link">_browse</a>
+        <a href="contact.html" class="nav-link nav-link--primary">_contact</a>
       </nav>
     </div>
   </header>
@@ -33,9 +33,12 @@
     <section id="about" class="hero">
       <div>
         <!-- <div class="hero-kicker">Personal site</div> -->
-        <h1 class="hero-title">
-          <span class="hero-highlight">Crossings-over in interdisciplinary research, creative practice, and curation.</span>
-        </h1>
+        <!-- <h1 class="hero-title">
+          <span class="hero-highlight"> [empty] </span>
+        </h1> -->
+        <p class="hero-lede">
+          <b>Crossings-over in interdisciplinary research, creative practice, and curation.</b>
+        </p>
         <p class="hero-lede">
           My areas of interest and specialisation include digital art, AI, critical/artistic approaches to blockchain, IP issues in digital culture, permacomputing, experimental videogame cultures, sound art, and 🚴‍♂️.
         </p>
@@ -56,10 +59,6 @@
           <div class="hero-meta-item">Based in: City / Country</div>
           <div class="hero-meta-item">Current role: Your role / affiliation</div>
         </div> -->
-        <div class="hero-cta-row">
-          <a href="#research" class="btn btn-primary">View selected work</a>
-          <a href="#browse" class="btn">Browse by tag</a>
-        </div>
       </div>
 
       <aside class="hero-feature" aria-label="Featured work">
@@ -76,73 +75,17 @@
       </aside>
     </section>
 
-    <!-- Research section (auto-filled) -->
-    <section id="research" class="section">
+    <!-- Featured section -->
+    <section id="featured" class="section">
       <header class="section-header">
-        <div class="section-title">Research &amp; Writing</div>
-        <h2 class="section-subtitle">Selected publications &amp; essays</h2>
+        <div class="section-title">Featured</div>
+        <h2 class="section-subtitle">Curated highlights</h2>
       </header>
 
-      <div id="research-container" class="card-grid">
+      <div id="featured-container" class="card-grid">
         <!-- Filled by JavaScript from content.json -->
       </div>
     </section>
-
-    <!-- Projects section (auto-filled) -->
-    <section id="projects" class="section">
-      <header class="section-header">
-        <div class="section-title">Projects</div>
-        <h2 class="section-subtitle">Artistic, curatorial &amp; experimental work</h2>
-      </header>
-
-      <div id="projects-container" class="card-grid">
-        <!-- Filled by JavaScript -->
-      </div>
-    </section>
-
-    <!-- Teaching section (auto-filled) -->
-    <section id="teaching" class="section">
-      <header class="section-header">
-        <div class="section-title">Teaching</div>
-        <h2 class="section-subtitle">Courses, workshops &amp; supervision</h2>
-      </header>
-
-      <div id="teaching-container" class="card-grid">
-        <!-- Filled by JavaScript -->
-      </div>
-    </section>
-
-    <!-- Tag-based browsing (tags + year + type) -->
-<section id="browse" class="section">
-  <header class="section-header">
-    <div class="section-title">Browse</div>
-    <h2 class="section-subtitle">All content by tags (including year &amp; type)</h2>
-  </header>
-
-  <!-- Filter controls -->
-  <div class="filters">
-    <div class="filter-group">
-      <div class="filter-label">Match</div>
-      <div class="filter-mode">
-        <button class="mode-button active" data-mode="any">Any selected tag</button>
-        <button class="mode-button" data-mode="all">All selected tags</button>
-      </div>
-    </div>
-
-    <div class="filter-group filter-group--tags">
-      <div class="tag-filter-label">Tags (click to select)</div>
-      <div id="tag-list" class="tag-list">
-        <!-- Tag buttons inserted by JavaScript -->
-      </div>
-    </div>
-  </div>
-
-  <!-- Result list -->
-  <div id="browse-results" class="browse-results">
-    <!-- Cards injected here based on filters -->
-  </div>
-</section>
-
 
     <!-- Contact -->
     <section id="contact" class="section">
