--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
   <main class="page">
     <section class="section">
       <header class="section-header">
-        <div class="section-title">About</div>
+        <div class="section-title">_About</div>
         <h1 class="section-subtitle">Longer bio and context coming soon.</h1>
       </header>
       <p class="hero-lede">
