--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
   <main class="page">
     <section class="section">
       <header class="section-header">
-        <div class="section-title">Contact</div>
+        <div class="section-title">_Contact</div>
         <h1 class="section-subtitle">Preferred channels and notes coming soon.</h1>
       </header>
       <p class="hero-lede">
