--- a/practice.html
+++ b/practice.html
@@ -29,7 +29,7 @@
   <main class="page">
     <section class="section">
       <header class="section-header">
-        <div class="section-title">Practice</div>
+        <div class="section-title">_Practice</div>
         <h1 class="section-subtitle">Artistic and curatorial work will be featured here.</h1>
       </header>
       <p class="hero-lede">
