--- a/teaching.html
+++ b/teaching.html
@@ -29,7 +29,7 @@
   <main class="page">
     <section class="section">
       <header class="section-header">
-        <div class="section-title">Teaching</div>
+        <div class="section-title">_Teaching</div>
         <h1 class="section-subtitle">Courses and workshops will be detailed here.</h1>
       </header>
       <p class="hero-lede">
