--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
   <main class="page">
     <section class="section">
       <header class="section-header">
-        <div class="section-title">Research</div>
+        <div class="section-title">_Research</div>
         <h1 class="section-subtitle">Publications and essays will live here.</h1>
       </header>
       <p class="hero-lede">
