--- a/about.html
+++ b/about.html
@@ -30,12 +30,13 @@
     <section class="section">
       <header class="section-header">
         <div class="section-title">_About</div>
-        <h1 class="section-subtitle">Longer bio and context coming soon.</h1>
+        <h1 class="section-subtitle">Shorter and longer bios.</h1>
       </header>
       <p class="hero-lede">
         This page will hold an extended introduction, background, and statement of practice.
       </p>
     </section>
   </main>
+  <script src="assets/external-links.js"></script>
 </body>
 </html>
