--- a/browse.html
+++ b/browse.html
@@ -50,6 +50,13 @@
               </div>
             </div>
 
+            <div class="filter-group filter-group--types">
+              <div class="filter-label">Type</div>
+              <div id="type-list" class="tag-list">
+                <!-- Type buttons inserted by JavaScript -->
+              </div>
+            </div>
+
             <div class="filter-group filter-group--tags">
               <div class="filter-label tag-filter-label">Tags (click to select)</div>
               <div id="tag-list" class="tag-list">
@@ -62,5 +69,6 @@
     </section>
   </main>
   <script src="assets/main.js"></script>
+  <script src="assets/external-links.js"></script>
 </body>
 </html>
