--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
            at Abertay University in Dundee/Scotland.
         </p>
         <p class="hero-lede">
-          <a href="https://orpheusinstituut.be/en/projects/metamusicx">Associate Researcher</a>, MetamusicX cluster, Orpheus Institute for Advanced Research in Music, Ghent/Belgium.
+          <a href="https://ifk.ac.at/fellows-detail/martin-zeilinger.html">Senior Research Fellow</a> at the International Research Center for Cultural Studies (IFK), University of Art and Design Linz. (2025-2026)
         </p>
         <p class="hero-lede">
-          <a href="https://marjz.notion.site/wet-tech">Co-organiser of Wet Tech performance series</a>, Dundee/Scotland.
+          <a href="https://orpheusinstituut.be/en/projects/metamusicx">Associate Researcher</a> at the MetamusicX cluster, Orpheus Institute for Advanced Studies & Research in Music, Ghent/Belgium.
+        </p>
+        <p class="hero-lede">
+          <a href="https://marjz.notion.site/wet-tech">Co-organiser of the Wet Tech performance series</a>, Dundee/Scotland.
         </p>
         <p class="hero-lede">
           <a href="https://marjz.net/about">More...</a>
@@ -61,16 +64,15 @@
         </div> -->
       </div>
 
-      <aside class="hero-feature" aria-label="Featured work">
-        <div class="hero-feature-image" aria-hidden="true"></div>
+      <aside class="hero-feature" id="hero-feature" aria-label="Pinned entry">
+        <div class="hero-feature-image" id="hero-feature-image" aria-hidden="true">
+          <img id="hero-feature-image-el" loading="lazy" alt="" hidden />
+        </div>
         <div class="hero-feature-body">
-          <div class="hero-feature-label">Featured</div>
-          <div class="hero-feature-title">Structures of Belonging</div>
-          <p class="hero-feature-blurb">
-            A look at blockchains as shared civic infrastructure, emphasizing collaboration,
-            mutual care, and co-ownership over speculation.
-          </p>
-          <a class="btn btn-primary" href="item.html?id=structures-of-belonging">Read the feature</a>
+          <div class="hero-feature-label" id="hero-feature-label">Pinned entry</div>
+          <div class="hero-feature-title" id="hero-feature-title">Set a pinned entry in Decap to feature it here.</div>
+          <p class="hero-feature-blurb" id="hero-feature-blurb"></p>
+          <a class="hero-feature-pill" id="hero-feature-link" href="#" hidden>_more</a>
         </div>
       </aside>
     </section>
@@ -78,7 +80,7 @@
     <!-- Featured section -->
     <section id="featured" class="section">
       <header class="section-header">
-        <div class="section-title">Featured</div>
+        <div class="section-title">_featured highlights</div>
         <h2 class="section-subtitle">Curated highlights</h2>
       </header>
 
@@ -97,8 +99,8 @@
       <div class="contact-card">
         <div>
           <p>
-            For collaborations, invitations, or questions, the best way to reach me
-            is via email. I’m also happy to hear from students, artists, and
+            For collaborations, invitations, supervision inquiries, or if you simply want to say hi, the best way to reach me
+            is via email. I’m always happy to hear from students, artists, and
             researchers interested in overlapping areas of work.
           </p>
           <div class="contact-links">
@@ -118,19 +120,18 @@
         </div>
         <div>
           <p>
-            Optional short note about how you handle responses (for example:
-            that you read everything but can’t always reply quickly, or that you
-            are especially keen on hearing about particular kinds of projects).
+            I'll try to get in touch as soon as possible.
           </p>
         </div>
       </div>
 
       <footer>
-        <!-- <span id="year"></span> --> Designed and infrequently updated by MZ ¯\_(ツ)_/¯
+        <!-- <span id="year"></span> --> Infrequently updated by MZ ¯\_(ツ)_/¯
       </footer>
     </section>
   </main>
 
   <script src="assets/main.js"></script>
+  <script src="assets/external-links.js"></script>
 </body>
 </html>
