--- a/practice.html
+++ b/practice.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Practice and projects by Martin Zeilinger.">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
-<body>
+<body data-section="practice">
   <header class="nav-wrapper">
     <div class="nav">
       <div class="nav-left">
@@ -30,12 +30,16 @@
     <section class="section">
       <header class="section-header">
         <div class="section-title">_Practice</div>
-        <h1 class="section-subtitle">Artistic and curatorial work will be featured here.</h1>
+        <h1 class="section-subtitle">Curatorial projects, artistic research, and creative practice are featured here.</h1>
       </header>
       <p class="hero-lede">
         A dedicated page for projects, exhibitions, collaborations, and experiments.
       </p>
+      <div id="section-list" class="browse-results"></div>
     </section>
   </main>
+  <script src="assets/main.js"></script>
+  <script src="assets/section-page.js"></script>
+  <script src="assets/external-links.js"></script>
 </body>
 </html>
