--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Research by Martin Zeilinger.">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
-<body>
+<body data-section="research">
   <header class="nav-wrapper">
     <div class="nav">
       <div class="nav-left">
@@ -30,12 +30,16 @@
     <section class="section">
       <header class="section-header">
         <div class="section-title">_Research</div>
-        <h1 class="section-subtitle">Publications and essays will live here.</h1>
+        <h1 class="section-subtitle">Publications will live here.</h1>
       </header>
       <p class="hero-lede">
         Dedicated space for research highlights, longer-form writing, and related updates.
       </p>
+      <div id="section-list" class="browse-results"></div>
     </section>
   </main>
+  <script src="assets/main.js"></script>
+  <script src="assets/section-page.js"></script>
+  <script src="assets/external-links.js"></script>
 </body>
 </html>
