--- a/teaching.html
+++ b/teaching.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Teaching by Martin Zeilinger.">
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
-<body>
+<body data-section="teaching">
   <header class="nav-wrapper">
     <div class="nav">
       <div class="nav-left">
@@ -30,12 +30,16 @@
     <section class="section">
       <header class="section-header">
         <div class="section-title">_Teaching</div>
-        <h1 class="section-subtitle">Courses and workshops will be detailed here.</h1>
+        <h1 class="section-subtitle">Details about teaching, supervision, workshops, and similar activities.</h1>
       </header>
       <p class="hero-lede">
         Space for syllabi, supervision, and notes on teaching-focused projects.
       </p>
+      <div id="section-list" class="browse-results"></div>
     </section>
   </main>
+  <script src="assets/main.js"></script>
+  <script src="assets/section-page.js"></script>
+  <script src="assets/external-links.js"></script>
 </body>
 </html>
