--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Martin Zeilinger · Research & Practice</title>
-  <meta name="description" content="Personal site of Martin Zeilinger – research, artistic practice, teaching.">
+  <meta name="description" content="Personal website of Martin Zeilinger.">
 
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
@@ -37,7 +37,7 @@
           <span class="hero-highlight"> [empty] </span>
         </h1> -->
         <p class="hero-lede">
-          <b>Crossings-over in interdisciplinary research, creative practice, and curation.</b>
+          <h2>Crossings-over between interdisciplinary research, creative practice, and curatorial work.</h2>
         </p>
         <p class="hero-lede">
           My areas of interest and specialisation include digital art, AI, critical/artistic approaches to blockchain, IP issues in digital culture, permacomputing, experimental videogame cultures, sound art, and 🚴‍♂️.
@@ -56,7 +56,7 @@
           <a href="https://marjz.notion.site/wet-tech">Co-organiser of the Wet Tech performance series</a>, Dundee/Scotland.
         </p>
         <p class="hero-lede">
-          <a href="https://marjz.net/about">More...</a>
+          <a href="https://marjz.net/about">Read more...</a>
         </p>
         <!-- <div class="hero-meta">
           <div class="hero-meta-item">Based in: City / Country</div>
@@ -80,8 +80,8 @@
     <!-- Featured section -->
     <section id="featured" class="section">
       <header class="section-header">
-        <div class="section-title">_featured highlights</div>
-        <h2 class="section-subtitle">Curated highlights</h2>
+        <div class="section-title">_featured posts</div>
+        <!-- <h2 class="section-subtitle">Curated highlights</h2> -->
       </header>
 
       <div id="featured-container" class="card-grid">
@@ -92,8 +92,8 @@
     <!-- Contact -->
     <section id="contact" class="section">
       <header class="section-header">
-        <div class="section-title">Contact</div>
-        <h2 class="section-subtitle">Stay in touch</h2>
+        <div class="section-title">_Get in touch</div>
+        <!-- <h2 class="section-subtitle">Stay in touch</h2> -->
       </header>
 
       <div class="contact-card">
@@ -101,27 +101,24 @@
           <p>
             For collaborations, invitations, supervision inquiries, or if you simply want to say hi, the best way to reach me
             is via email. I’m always happy to hear from students, artists, and
-            researchers interested in overlapping areas of work.
+            researchers interested in overlapping areas of work. I'll try to get in touch as soon as possible.
           </p>
           <div class="contact-links">
-            <a class="contact-pill" href="mailto:you@example.com">
+            <a class="contact-pill">
               <strong>m [dot] zeilinger [at] abertay [dot] ac [dot] uk</strong>
               <span>Email</span>
             </a>
-            <a class="contact-pill" href="#" target="_blank" rel="noopener">
+            <a class="contact-pill" href="https://rke.abertay.ac.uk/en/persons/martin-zeilinger" target="_blank" rel="noopener">
               <strong>Academic profile</strong>
               <span>Institutional page</span>
             </a>
-            <a class="contact-pill" href="#" target="_blank" rel="noopener">
-              <strong>Other link</strong>
-              <span>Portfolio / social</span>
+            <a class="contact-pill" href="https://www.instagram.com/mrtnzlngr/" target="_blank" rel="noopener">
+              <strong>IG</strong>
+            </a>
+            <a class="contact-pill" href="www.linkedin.com/in/martin-zeilinger-43251b1a" target="_blank" rel="noopener">
+              <strong>LnkdIn</strong>
             </a>
           </div>
-        </div>
-        <div>
-          <p>
-            I'll try to get in touch as soon as possible.
-          </p>
         </div>
       </div>
 
