--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,6 @@
   <title>Decap CMS · marjz</title>
 </head>
 <body>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script src="https://unpkg.com/decap-cms@3.8.0/dist/decap-cms.js"></script>
 </body>
 </html>
