Updates and deeltions

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!-- <h2 class="section-subtitle">Curated highlights</h2> -->
       </header>
 
-      <div id="featured-container" class="card-grid">
+      <div id="featured-container" class="card-grid" data-columns="2">
         <!-- Filled by JavaScript from content.json -->
       </div>
     </section>
