Updating _practice page look

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <p>
             For collaborations, invitations, supervision inquiries, or if you simply want to say hi, the best way to reach me
             is via email. I’m always happy to hear from students, artists, and
-            researchers interested in overlapping areas of work. I'll try to get in touch as soon as possible.
+            researchers interested in overlapping areas of work. I'll try to get back to you as soon as possible.
           </p>
           <div class="contact-links">
             <a class="contact-pill">
