--- a/practice.html
+++ b/practice.html
@@ -35,7 +35,7 @@
       <p class="hero-lede">
         A dedicated page for projects, exhibitions, collaborations, and experiments.
       </p>
-      <div id="section-list" class="browse-results"></div>
+      <div id="section-list" class="practice-grid"></div>
     </section>
   </main>
   <script src="assets/main.js"></script>
