--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="nav-links" aria-label="Main navigation">
         <a href="about.html" class="nav-link">_about</a>
         <a href="research.html" class="nav-link">_research</a>
-        <a href="practice.html" class="nav-link">_practice</a>
+        <a href="practice.html" class="nav-link nav-link--tooltip" data-tooltip="Projects, exhibitions, and curatorial work">_practice</a>
         <a href="teaching.html" class="nav-link">_teaching</a>
         <a href="browse.html" class="nav-link">_browse</a>
         <a href="contact.html" class="nav-link nav-link--primary">_contact</a>
@@ -36,9 +36,9 @@
         <!-- <h1 class="hero-title">
           <span class="hero-highlight"> [empty] </span>
         </h1> -->
-        <p class="hero-lede">
-          <h3><i>Crossings-over between interdisciplinary research, creative practice, and curatorial work.</i></h3>
-        </p>
+        <h3 class="hero-lede hero-heading">
+          <i>Crossings-over between interdisciplinary research, creative practice, and curatorial work.</i>
+        </h3>
         <p class="hero-lede">
           My interests include digital art, AI, critical artistic approaches to blockchain, permacomputing, IP issues in digital culture, agency and posthumanism, experimental videogame cultures, sound art, and 🚴‍♂️.
         </p>
