--- a/practice.html
+++ b/practice.html
@@ -18,7 +18,7 @@
       <nav class="nav-links" aria-label="Main navigation">
         <a href="about.html" class="nav-link">_about</a>
         <a href="research.html" class="nav-link">_research</a>
-        <a href="practice.html" class="nav-link">_practice</a>
+        <a href="practice.html" class="nav-link nav-link--tooltip" data-tooltip="Projects, exhibitions, and curatorial work">_practice</a>
         <a href="teaching.html" class="nav-link">_teaching</a>
         <a href="browse.html" class="nav-link">_browse</a>
         <a href="contact.html" class="nav-link nav-link--primary">_contact</a>
@@ -30,11 +30,8 @@
     <section class="section">
       <header class="section-header">
         <div class="section-title">_Practice</div>
-        <h1 class="section-subtitle">Curatorial projects, artistic research, and creative practice are featured here.</h1>
+        <h1 class="section-subtitle">Curatorial projects, artistic research, and creative practice</h1>
       </header>
-      <p class="hero-lede">
-        A dedicated page for projects, exhibitions, collaborations, and experiments.
-      </p>
       <div id="section-list" class="practice-grid"></div>
     </section>
   </main>
