--- a/teaching.html
+++ b/teaching.html
@@ -18,7 +18,7 @@
       <nav class="nav-links" aria-label="Main navigation">
         <a href="about.html" class="nav-link">_about</a>
         <a href="research.html" class="nav-link">_research</a>
-        <a href="practice.html" class="nav-link">_practice</a>
+        <a href="practice.html" class="nav-link nav-link--tooltip" data-tooltip="Projects, exhibitions, and curatorial work">_practice</a>
         <a href="teaching.html" class="nav-link">_teaching</a>
         <a href="browse.html" class="nav-link">_browse</a>
         <a href="contact.html" class="nav-link nav-link--primary">_contact</a>
